--- a/investors.html
+++ b/investors.html
@@ -20,7 +20,7 @@
       <div class="row column medium-8 large-6 xlarge-5 xxlarge-4">
         <h1 class="title">Backed By Top Decile Investors</h1>
         <p class="content">
-          We would not be anywhere without our trusted investors. We thank each of them for where we are today.
+          We have no investors!!!!
         </p>
       </div>
 
